--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -8,7 +8,7 @@
     script-src 'self'; 
     style-src 'self' 'unsafe-inline'; 
     img-src 'self' data:; 
-    connect-src 'self' http://localhost:8000 http://127.0.0.1:8000 ws://localhost:8000 https://cloudbin-backend.onrender.com https://www.virustotal.com/api/v3/urls;">
+    connect-src 'self' http://localhost:8000 http://127.0.0.1:8000 ws://localhost:8000 https://cloudbin-backend.onrender.com https://www.virustotal.com/api/v3/ ;">
 
     
     <link href="/src/main.css" rel="stylesheet">
